@@ -29,7 +29,6 @@ configurations {
 }
 
 dependencies {
-    compileOnly project(":cassandra-analytics-common")
     compileOnly(project(':cassandra-bridge'))
 
     compileOnly(group: "${sparkGroupId}", name: "spark-core_${scalaMajorVersion}", version: "${project.rootProject.sparkVersion}")
