@@ -1,4 +1,5 @@
 1.0.0
+ * Add new module cassandra-analytics-common to store common code with minimal dependencies (CASSANDRA-19748)
  * NullPointerException when reading static column with null values (CASSANDRA-19626)
  * Integrate with the latest sidecar client (CASSANDRA-19616)
  * Support bulk write via S3 (CASSANDRA-19563)
